--- a/css/style.css
+++ b/css/style.css
@@ -1450,7 +1450,7 @@ footer .icon-section i {
 }
 
 footer .icon-section i:hover{
-  transform: scale(1.2);
+  transform: scale(1.8);
 }
 
 
@@ -1716,9 +1716,6 @@ padding: 0 !important;
     padding-right: 4px !important;
   }
   
-  #contact{
-    min-height: 720px;
-  }
 
   footer{
     height: 120px;
@@ -1813,13 +1810,6 @@ padding: 0 !important;
     display: none;
   }
 
-  .form-container{
-    width: 80%;
-    margin-top: 1vh;
-    border: 0;
-    box-shadow: 0px 0px 0px 0px #474747;
-  }
-
   #earth{
    
     height: 15vh !important;
@@ -1867,10 +1857,14 @@ padding: 0 !important;
 
 
 
+
   .form-container{
-    height: 50vh;
-    min-height: 450px;
+    width: 80%;
+    margin-top: 1vh;
+    border: 0;
+    box-shadow: 0px 0px 0px 0px #474747;
   }
+
   
     #message{
       height: 5vh;
@@ -1988,7 +1982,7 @@ padding: 0 !important;
 
 @media screen and (max-height: 700px) and (max-width:520px){
   section>div{
-    margin-bottom:30px ;
+    margin-bottom:60px ;
   }
 
   #projects .text-box{
@@ -1998,3 +1992,11 @@ padding: 0 !important;
   
 }
 
+
+
+@media screen and (max-height: 484px){
+  section{
+    margin-bottom:30px ;
+    min-height: 110vh;
+  }
+}
