--- a/css/style.css
+++ b/css/style.css
@@ -419,7 +419,7 @@ section {
 section>div{
   width: 90%;
   margin: 10px;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
   margin-top: 50px;
 
 }
@@ -1764,10 +1764,13 @@ padding: 0 !important;
     padding: 7px;
   }
 
-  #projects .icon-section{
-    display: none;
+  #projects .text-box{
+    height: 310px !important;
   }
 
+  .next, .prev{
+    top:-170px !important;
+  }
 }
 
 
@@ -1949,7 +1952,12 @@ padding: 0 !important;
     margin-bottom:30px ;
     min-height: 110vh;
   }
+
+  #home .text-box{
+    margin-bottom: 2px !important;
+  }
 }
+
 
 
 
