--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,8 @@ html {
 
 .dark {
   --color-1: #ffffff;
-  --color-1-main: #078fe3;
-  --color-1-bg: rgb(13, 30, 24);
+  --color-1-main: #5506ff;
+  --color-1-bg: rgb(17, 13, 30);
 
   --linear-bg-1:  linear-gradient(90deg, #436bed 0%, #6a52f2 100%);
   --color-2-body:#ffffff;
@@ -420,7 +420,7 @@ section>div{
   width: 90%;
   margin: 10px;
   margin-bottom: 50px;
-  margin-top: 50px;
+  margin-top: 0px;
 
 }
 
@@ -951,6 +951,7 @@ color: #ffffff !important;
   padding: 20px; 
   width: 540px ;
   height: 230px;
+  margin-top: 28px;
   
   background: var( --color-2-bg);
   border-radius: 20px;
@@ -985,7 +986,7 @@ color: #ffffff !important;
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
-  padding: 11px;
+  padding: 7px;
   position: relative;
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
@@ -1024,7 +1025,7 @@ color: #ffffff !important;
 /* Number text (1/3 etc) */
 .numbertext {
   position: relative;
-  top:37px;
+  top:57px;
   left:32px;
   color: var(--color-2-body);
   font-size: 12px;
@@ -1671,7 +1672,7 @@ padding: 0 !important;
   
   .float-buttons{
   
-    bottom:150px
+    bottom:30%;
   }
   
   
@@ -1768,8 +1769,15 @@ padding: 0 !important;
     height: 310px !important;
   }
 
+  #projects .icon-section{
+    position: relative;
+    top:50px;
+  }
+
   .next, .prev{
     top:-170px !important;
+    transform: scale(0.8);
+    
   }
 }
 
@@ -1817,6 +1825,8 @@ padding: 0 !important;
 
 
 @media screen and (max-height: 978px) and (max-width:1022px){
+
+  
   .draw-container{
     display: none;
   }
@@ -2001,6 +2011,7 @@ padding: 0 !important;
   
   .next,.prev{
     top:-140px;
+    transform: scale(0.8);
   }
   
   .next{
@@ -2015,4 +2026,12 @@ padding: 0 !important;
     left:10%;
   }
   
+  }
+
+
+
+  @media screen and (max-width: 313px){
+    #projects .icon-section{
+      display: none;
+    }
   }
