--- a/css/style.css
+++ b/css/style.css
@@ -1709,7 +1709,7 @@ padding: 0 !important;
   
   #skills-title-text{
     border: 0;
-    margin: 0;
+    margin-bottom: 10px;
   }
 
   #education .img-div{
