--- a/css/style.css
+++ b/css/style.css
@@ -1976,7 +1976,7 @@ padding: 0 !important;
 
 section>div{ 
     position: relative;
-    top:-25px;
+    top:-35px;
   }
 
  #home>div{ 
@@ -1986,7 +1986,7 @@ section>div{
 
   #skills>div{ 
     position: relative;
-    top:-75x;
+    top:-125x;
   }
 
 
@@ -1996,8 +1996,19 @@ section>div{
 
 @media screen and (max-height: 484px){
   section{
-    min-height: 110vh;
+    min-height: 120vh;
+   
   }
+
+  section>div{
+
+    position: relative;
+    top:0px !important;
+    transition: 0ms;
+    transform: scale(0.8);
+  }
+
+
 
   #home .text-box{
     margin-bottom: 2px !important;
