--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 800;
+  user-select: none;
 }
 
 #float-text i{
@@ -244,6 +245,7 @@ header nav a {
     border-radius: 5px;
     letter-spacing: 0.5px;
     font-weight: semi-bold;
+    user-select: none;
 }
 
 header p{
@@ -376,7 +378,7 @@ header nav .active{
   background: var(--linear-bg-1);
 }
 .theme-button input:checked + label .ball {
-  transform: translateX(45px);
+  transform: translateX(48px);
 }
 .theme-button input {
   display: none;
@@ -1669,7 +1671,7 @@ padding: 0 !important;
   
   
   .float-buttons{
-  
+    user-select: none;
     bottom:30%;
   }
   
@@ -1679,6 +1681,7 @@ padding: 0 !important;
   }
   
   .menu li{
+    user-select: none;
     padding: 0;
     margin: 0;
   }
@@ -1690,6 +1693,7 @@ padding: 0 !important;
     padding: 0;
     margin: 0;
     font-size: 14px;
+    user-select: none;
   }
   
   .menu p{
