--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html {
   --color-1-main: #5849ff;
   --color-1-bg: rgb(13, 17, 30);
 
-  --linear-bg-1:  linear-gradient(90deg, #4391fe 0%, #8e0cff 100%);
+  --linear-bg-1:  linear-gradient(90deg, #4391fe 0%, #7d49ff 100%);
   --linear-bg-2:  linear-gradient(90deg, #3c7feaed 0%, #634ce6ea 100%);
   --color-2-body:#ffffff;
   --color-2-bg: #242424;
@@ -280,7 +280,6 @@ header nav .active{
 
 #button-more{
   display: none;
-  font-weight: 900;
    background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -592,6 +591,7 @@ section .text-container .text-box div{
   border-left:0;
   border-right:0;
   margin-top: 12px;
+  font-weight: 900;
 
 }
 
@@ -599,7 +599,6 @@ section .text-container .text-box div{
 .icon-div{
   margin: 3px;
   font-size:12px ;
-  font-weight: 900;
   
 }
 
@@ -611,7 +610,6 @@ section .text-container .text-box div{
 
 .icon-div i{
   font-size: 25px;
-  font-weight: 900;
   
 }
 
@@ -1479,7 +1477,7 @@ footer .icon-section i {
 }
 
 footer .icon-section i:hover{
-  transform: scale(1.8);
+  transform: scale(1.1);
 }
 
 
