--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html {
   --color-1: #ffffff;
-  --color-1-main: #2a42ff;
+  --color-1-main: #0970e5;
   --color-1-bg: rgb(28, 40, 74);
 
   --linear-bg-1:  linear-gradient(90deg, #009dff 0%, #3a47d5 100%);
@@ -22,11 +22,11 @@ html {
 
 .dark {
   --color-1: #ffffff;
-  --color-1-main: #0be4b5;
-  --color-1-bg: rgb(13, 17, 30);
+  --color-1-main: #04d4cd;
+  --color-1-bg: rgb(14, 30, 13);
 
-  --linear-bg-1:  linear-gradient(90deg, #189aeb 0%, #07ef83 100%);
-  --linear-bg-2: linear-gradient(90deg, #0d476b 0%, #056337 100%);
+  --linear-bg-1:  linear-gradient(90deg, #0c97ed 0%, #07df7a 100%);
+  --linear-bg-2: linear-gradient(90deg, #107fc4 0%, #02bb65 100%);
   --color-2-body:#ffffff;
   --color-2-bg: #242424;
   --color-2-bg-banner:#4a4a4af0;
@@ -758,10 +758,8 @@ header p, i{
 
 strong{
 
-  background: var(--linear-bg-1);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-weight: 700;
+color: var(--color-1-main);
+  font-weight: 600;
 }
 
 
