--- a/css/style.css
+++ b/css/style.css
@@ -105,13 +105,21 @@ a {
 
 
 .float-buttons{
+ 
+    user-select: none;
+   
+
   z-index: 1000;
   cursor: pointer;
   position: fixed;
   right: 0px;
-  bottom: 10%;
+  bottom:30%;
+  
   background-color: var(--color-2-bg);
-  box-shadow: 1px 2px 4px 1px #464646;
+  box-shadow: -1px 3px 7px -2px rgba(15,15,15,0.75);
+-webkit-box-shadow: -1px 3px 7px -2px rgba(15,15,15,0.75);
+-moz-box-shadow: -1px 3px 7px -2px rgba(15,15,15,0.75);
+  border: 1px solid #5a5a5adb;
   border-right: 0;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
@@ -217,6 +225,7 @@ header {
     border-top:0;
     border-left:0;
     border-right:0;
+
 
 
 
@@ -1705,10 +1714,7 @@ padding: 0 !important;
 
   
   
-  .float-buttons{
-    user-select: none;
-    bottom:30%;
-  }
+
   
   
   .menu ul{
