--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ background: var(--linear-bg-1);
 
 .fade-out{
   display: none;
+
 }
 
 
@@ -233,7 +234,7 @@ header {
 
 
 
-nav ul{
+header nav ul{
      display: inline-block;
      margin-right: 40px;
 }
@@ -255,7 +256,7 @@ header div, nav li{
 
 header nav a {
     display: inline-block;
-    padding: 7px 10px;
+    padding: 6px 10px;
     margin-right: 6px;
     font-size: 1.1rem;
     color: var(--color-2-body);
@@ -272,7 +273,7 @@ header p{
 }
 
 header nav a:hover{
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 
@@ -619,6 +620,7 @@ section .text-container .text-box div{
 
 .icon-div i{
   font-size: 25px;
+  color: rgb(172, 172, 172);
   
 }
 
@@ -963,21 +965,55 @@ color: #ffffff !important;
 }
 
 #projects ul{
-  margin: 20px !important;
-  margin-bottom: 0 !important;
+  width: 220px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  margin-top: 19px;
+  margin: 2px;
 }
 
 
 #projects ul li{
-  margin-right: 20px;
-  font-size: 14px;  
+
+  margin-right: 7px;
+  padding: 3px;
+  font-size: 14px;
+  cursor: pointer;
+  color: var(--color-1);  
+
 }
+
+.gallery-container{
+  display: inline-block;
+  width: auto;
+  height: auto;
+  vertical-align: miidle;
+  text-align: center;
+  justify-content: center;
+}
+
+#projects ul:hover{
+  transform: scale(1.02);
+
+
+}
+
+
+#projects ul li:hover{
+  font-weight: 700;
+
+}
+
+
+#projects nav .active{
+  font-weight: 700;
+}
+
 
 #projects .text-box {
   padding: 20px; 
   width: 540px ;
-  height: 210px !important;
-  margin-top: 28px;
+  height: 220px !important;
   
   background: var( --color-2-bg);
   border-radius: 20px;
@@ -989,8 +1025,7 @@ color: #ffffff !important;
 }
 
 
-.projects-gallery{
-  display: none;
+#projects-gallery{
   width: auto;
   height: auto;
   vertical-align: top;
@@ -1052,10 +1087,10 @@ color: #ffffff !important;
 /* Number text (1/3 etc) */
 .numbertext {
   position: relative;
-  top:57px;
+  top:32px;
   left:32px;
   color: var(--color-2-body);
-  font-size: 12px;
+  font-size: 11px;
   margin: 0 !important;
   padding: 0 !important;
   width: fit-content !important;
@@ -1080,13 +1115,18 @@ color: #ffffff !important;
   transition: 0.6s ease;
 }
 
-.projects-gallery .active, .dot:hover {
+#projects-gallery .active, .dot:hover {
   background-color: #ffffff;
 }
 
-.projects-gallery:hover, .img-div:hover{ 
+#projects-gallery:hover, #research-gallery:hover{ 
+  transform: scale(1.02);
+}
+
+.img-div:hover{ 
   transform: scale(1.05);
 }
+
 
 
   #projects h3:hover{
@@ -1122,7 +1162,7 @@ color: #ffffff !important;
 
 #projects .icon-section{
 color: var(--color-2-body);
-font-weight: 600;
+font-weight: 500;
 }
 
 .header-projects{
@@ -1155,12 +1195,27 @@ font-weight: 600;
 
 #projects-description{
   color: var(--color-1) !important;
+  margin-top: 20px;
+  margin-bottom: 18px;
+}
+
+
+.research-description{
+ margin-top: 11px;
+  font-size: 18px;
+  line-height: 1.2rem;
+}
+
+.research-title{
+  font-size: 20px !important;
+  margin-bottom: 20px !important;
+  max-width:460px ;
 }
 
 
  #projects .draw-container{
    margin:70px;
-   vertical-align: top;
+   vertical-align: bottom;
 }
  
 
@@ -1193,6 +1248,17 @@ font-weight: 600;
 }
 
 
+#projects-gallery .tag-container{
+  position: relative;
+  left:160px;
+}
+
+
+#research-gallery .tag-container{
+  position: relative;
+  left:210px;
+}
+
 #projects .img-text-box{
   height: 120px;
   margin-bottom: 30px;
@@ -1203,12 +1269,12 @@ font-weight: 600;
 
 }
 
-.projects-gallery, #projects .draw-container{
+#projects .draw-container{
   display: inline-block !important;
 }
 
 .button-div{
-  margin-top: 10px;
+  margin-top: 4px;
   margin-bottom: 10px;
   display: inline-block;
   background: var(--linear-bg-1);
@@ -1645,6 +1711,17 @@ padding: 0 !important;
 
   @media screen and (max-width: 872px){
 
+    .projects-tag{
+      
+     top: -118px;
+     left:110px;
+
+    }
+    
+    
+
+
+
     .float-buttons{
       bottom: 80px !important;
   
@@ -1786,8 +1863,10 @@ padding: 0 !important;
     min-height: 110vh;
   }
 
-  #projects .img-div, #projects img{
+  #projects .img-div, #projects img, .img-div i{
     height: 100px !important;
+    font-size: 100px;
+    color: #c2c2c2;
   }
 
   #projects .text-box{
@@ -2072,13 +2151,24 @@ section>div{
     margin-top: 10px;
   }
   
-  #projects .img-div, img{
+  #projects .img-div, img, .img-text-box{
     height: 100px !important;
-    margin:0;
+    margin-bottom:0 !important;
+    margin-top:10px !important;
   }
   
+  
+  #projects-description{
+    margin-bottom: 20px;
+  }
+
+  #projects .img-div{
+    display: block;
+  }
+
   #projects h3{
     margin-top:20px;
+    margin-bottom:0;
   }
 
   #projects .text-box-description{
@@ -2088,7 +2178,8 @@ section>div{
   #projects .button-div{
     padding: 0;
     margin: 0;
-    margin-bottom: 15px;
+    margin-top: 14px;
+    margin-bottom: 17px;
   }
 
   #projects .button-div a{
@@ -2098,13 +2189,38 @@ section>div{
   }
   
   #projects .text-box{
-    width: 78%;
-    height: 255px !important;
+    width: 230px !important;
+    height: 295px !important;
     margin-top: 4px;
   }
   
   
   
+  .projects-tag{
+    position: relative;
+    left:-75px ;
+  }
+
+
+  .research-tag1{
+    position: absolute;
+    top:-17px;
+    left:-200px ;
+  }
+
+
+  
+  #research-gallery .button-div{
+    margin: 0 !important;
+  }
+
+  .research-title{
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 18px !important;
+    line-height: 1.3rem;
+  }
+
   #projects .icon-section{
     margin-top: 2px;
   
@@ -2115,16 +2231,16 @@ section>div{
   }
   
   .next,.prev{
-    top:-160px;
+    top:-190px;
     transform: scale(0.8);
   }
   
   .next{
-    left: 34%;
+    left: 40%;
   }
   
   .prev{
-    left: -34%;
+    left: -36%;
   }
 
   .numbertext{
