--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@ z-index: 5;
 background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
   font-weight: 800;
 }
 
@@ -148,6 +149,7 @@ background: var(--linear-bg-1);
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
   font-weight: 800;
 
 }
@@ -160,6 +162,7 @@ background: var(--linear-bg-1);
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
  
 
 }
@@ -357,6 +360,7 @@ header nav .active{
     background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
     font-weight: bolder;
     transition: 0.8s;
     opacity: 1;
@@ -488,6 +492,7 @@ section h1 {
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
 }
 
 
@@ -501,6 +506,7 @@ section h2 {
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
 }
 
 
@@ -639,6 +645,7 @@ section .text-container .text-box div{
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
   font-weight: 900;
 }
 
@@ -676,8 +683,10 @@ section .text-container .text-box div{
 
 #home .icon-section{
   background: var(--linear-bg-1);
+  display: inline-block;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
 }
 
 #home .text-box{
@@ -694,9 +703,11 @@ section .text-container .text-box div{
 
 
 .icon-div:hover{
+  display: inline-block;
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
 
   transform: scale(1.05);
 
@@ -721,6 +732,7 @@ header p, i{
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
 
 
 }
@@ -748,6 +760,7 @@ header p, i{
 
 
 .arrow-container i{
+  
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -828,6 +841,7 @@ section>div h2{
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
   font-weight: 900 !important;
 }
 
@@ -1065,6 +1079,7 @@ color: #ffffff !important;
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
   top:-150px;
   font-weight: bold;
   font-size: 18px;
@@ -1145,6 +1160,7 @@ color: #ffffff !important;
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
 }
 
 
@@ -1292,6 +1308,7 @@ font-weight: 500;
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
 }
 
 #projects .button-div a{
@@ -1392,6 +1409,7 @@ display: inline;
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
   font-weight: bold;
 }
 
@@ -2094,6 +2112,7 @@ padding: 0 !important;
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
   padding: 2px;
   font-weight: 800;
 }
