--- a/css/style.css
+++ b/css/style.css
@@ -2298,3 +2298,29 @@ top:40px;
   }
 
 
+  @media not all and (min-resolution:.001dpcm) { 
+    @supports (-webkit-appearance:none) {
+      #home .icon-section{
+        background: var(--linear-bg-1);
+        display: inline-block;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: var(--color-1-main);
+        text-shadow: 0px 0px #00000000;
+      }
+
+      
+      .button-div{
+        background: var(--linear-bg-1);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: var(--color-1-main);
+        text-shadow: 0px 0px #00000000;
+      }
+
+
+      }
+
+
+
+
+    }
+}
