--- a/css/style.css
+++ b/css/style.css
@@ -2308,7 +2308,21 @@ top:40px;
         text-shadow: 0px 0px #00000000;
       }
 
+
+      .icon-div:hover{
+        background: none;
+        border: 0;
+        -webkit-text-fill-color: var(--color-1-bg);
+        transform: scale(1.05);
       
+      }
+
+      
+      #home a{
+        font-weight: 100 !important;
+      }
+
+
       .button-div{
         background: var(--linear-bg-1);
         -webkit-background-clip: text;
@@ -2318,6 +2332,9 @@ top:40px;
 
 
       
+      .button-div:hover{
+        border: 0;   
+      }
 
 
 
